--- a/modulo 2/acerto.html
+++ b/modulo 2/acerto.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <script>
     
-    var questoes = prompt("A prova contém 50 questões<br>");
+    var questoes = prompt("Digite a quantidade máxima de questões");
     document.write("Rafaela acertou 15 questões: ");
     document.write((15/50)*100 + "% da prova");
 
