--- a/monibank-main/pages/abrir-conta-form.html
+++ b/monibank-main/pages/abrir-conta-form.html
@@ -159,7 +159,7 @@
         </section>
     </footer>
 
-    <script src="js/script.js" type="module"></script>
+    <script src="../js/script.js" type="module"></script>
 </body>
 
 
