--- a/teste.html
+++ b/teste.html
@@ -1,1 +1,14 @@
-brasil
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DocumentoTeste</title>
+</head>
+<body>
+
+    <h1>Documento feito através do VSCODE integrado ao GITHUB</h1>
+    
+</body>
+</html>
